<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<!-- Upload now -->    
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_upload"/>

	<!-- Sample now -->    
    <item
        android:id="@+id/action_sample"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sample"/>
    
    
	<!-- Settings -->    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <!-- About -->    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    
</menu>
