<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/uptime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/uptime"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/upload_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uptime_label"
        android:layout_below="@+id/uptime_label"
        android:text="@string/upload"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/uptime_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/uptime_label"
        android:layout_alignParentRight="true"
        android:text="@string/stopped"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/upload_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/upload_label"
        android:layout_alignParentRight="true"
        android:text="@string/never"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:onClick="handleDataToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/upload_text"
        android:layout_below="@+id/upload_text"
        android:layout_marginTop="107dp" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:onClick="handleVpnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton1"
        android:layout_below="@+id/toggleButton1"
        android:layout_marginTop="22dp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButton1"
        android:layout_alignBottom="@+id/toggleButton1"
        android:layout_alignLeft="@+id/upload_label"
        android:text="@string/toggle_data"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButton2"
        android:layout_alignBottom="@+id/toggleButton2"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/toggle_vpn"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</RelativeLayout>